@@ -3,6 +3,8 @@ eZ publish changelog:
 
 Changes from 2.2 Beta 1 to 2.2 Beta 2
 -----------------------------------
+* Added support for multiple keywords in url translator.
+* Added section support with Sitedesign, Template and Language override.
 * Fixed problems with articles being stored with invalid XML
 * Added topic link from article list and article view
 * Added modification sorting on article categories.
